<resources>
    <string name="app_name">Recipify</string>
    <string name="food_name">Nama Resep</string>
    <string name="descriptions">Deskripsi</string>
    <string name="ingredients">Bahan-bahan</string>
    <string name="steps">Langkah-langkah</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="share">Share</string>
    <string name="food_img_desc">Food_img</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Rizky Alifiyah Rahma</string>
    <string name="email">rizkyalifiyah1463@gmail.com</string>
    <string name="profile_desc">Saya adalah mahasiswi semester 6 di Institut Teknologi Sepuluh Nopember (ITS) departemen Teknik Informatika</string>
    <string name="profile_img_desc">profileimg</string>
    <string name="logo_img_desc">logoimg</string>
    <string name="resepimg_desc">resepimg</string>
    <string-array name="data_name">
        <item>Rendang Paha Ayam Organik</item>
        <item>Gulai Ayam</item>
        <item>Indomie Seblak Makaroni</item>
        <item>Penyetan Sambel Terasi Udang</item>
        <item>Tumis Jamur Tiram</item>
        <item>Resep Capcay</item>
        <item>Oseng Kacang Panjang</item>
        <item>Cumi Saus Mentega</item>
        <item>Resep Pesmol Ikan</item>
        <item>Cumi Sambel Ijo</item>
        <item>Pepes Lais Tempoyak</item>
        <item>Resep Ikan Bakar</item>
        <item>Sup Kimlo Bakso</item>
        <item>Ikan Masak Belimbing</item>
        <item>Asem-asem Daging</item>
        <item>Kerang Ijo Pedas</item>
        <item>Jengkol Kalio</item>
        <item>Garang Asem Ayam</item>
        <item>Telur Dadar Gulung Saos Asam Manis</item>
        <item>Sup Tulang</item>
    </string-array>
    <string-array name="data_descriptions">
        <item>Hidangan khas Minangkabau yang menggunakan paha ayam organik, dimasak dengan rempah-rempah kaya akan bumbu hingga daging empuk dan bumbu meresap.</item>
        <item>Kuah kental berbumbu kunyit dan santan, dengan potongan ayam yang lembut, merupakan sajian khas Indonesia yang kaya rasa</item>
        <item>Perpaduan unik antara mie instan dengan seblak khas Sunda, ditambah makaroni untuk tekstur yang berbeda</item>
        <item>Ayam atau tempe yang dipenyet bersama sambal terasi udang yang pedas, memberikan cita rasa yang khas dan menggugah selera</item>
        <item>Jamur tiram yang ditumis dengan bumbu sederhana, menyajikan rasa umami yang khas dan tekstur yang lezat</item>
        <item>Sayuran segar yang dipadukan dengan potongan ayam atau seafood, dimasak dengan saus yang gurih, sajian sehat khas Tionghoa</item>
        <item>Kacang panjang yang dioseng dengan bumbu pedas, menawarkan rasa yang gurih dan sedikit pedas</item>
        <item>Cumi-cumi yang dimasak dengan saus mentega yang kaya rasa, menghasilkan hidangan yang lembut dan gurih</item>
        <item>Ikan yang dimasak dengan bumbu kuning khas Sunda, disajikan dengan saus yang kental dan sedikit asam</item>
        <item>Cumi yang disajikan dengan sambal hijau yang pedas, menawarkan sensasi rasa yang segar dan pedas</item>
        <item>Ikan lais yang dibungkus dengan daun pisang dan dimasak dengan tempoyak, memberikan cita rasa yang asam dan unik</item>
        <item>Ikan yang dibumbui dan dibakar hingga matang, menawarkan rasa yang gurih dengan aroma asap yang khas</item>
        <item>Sup bening dengan isian bakso, jamur, dan sayuran, menawarkan rasa yang ringan dan menyegarkan</item>
        <item>Ikan yang dimasak dengan belimbing wuluh, memberikan cita rasa asam yang menyegarkan dan unik</item>
        <item>Potongan daging yang dimasak dengan kuah asam, memberikan sensasi rasa yang kaya dan segar</item>
        <item>Kerang hijau yang disajikan dengan saus pedas, menggugah selera dengan rasa yang pedas dan gurih</item>
        <item>Jengkol yang dimasak dengan bumbu khas Minang, menghasilkan hidangan yang pedas dan kaya rempah</item>
        <item>Ayam yang dimasak dalam bungkus daun pisang dengan cita rasa asam, gurih, dan sedikit pedas</item>
        <item>Telur dadar yang digulung dan disajikan dengan saus asam manis, menawarkan rasa yang unik dan menarik</item>
        <item>Kuah bening kaya rasa dengan tulang sapi atau tulang ayam sebagai bahan utama, menghangatkan dan menyehatkan</item>
    </string-array>
</resources>